[package]
name = "sq"
version = "0.1.0"
authors = ["Mordecai Malignatus <mordecai@malignat.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
chrono = "0.4"
ansi_term = "0.12.1"
fraction = {version = "0.6.3", features = ["with-serde-support"] }
rand = "0.8.4"
prettytable-rs = "0.8.0"